# artificial-text-detection

./: .dvcignore  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  codecov.yml  dvc.yaml  get_easynmt_models.sh  parameters.yaml  proxy_requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py  wandb.key
.dvc/: config
.github/workflows/: build.yml  python-package.yml
artificial_detection/: pipeline.py  unsupervised_baseline.py  utils.py
artificial_detection/arguments/: __init__.py  arguments.py  proxy_arguments.py  supervised_arguments.py
artificial_detection/data/: README.md  data.py  factory.py  generate.py  generate_language_model.py  proxy.py
artificial_detection/models/: detectors.py  t5.py  translation.py  validate.py
artificial_detection/models/smr/: core.py  sais.py
artificial_detection/pipelines/: __init__.py  compute.py  supervised.py  unsupervised_baseline.py
detection/: README.md  __init__.py  arguments.py  pipeline.py  run.py  unsupervised_baseline.py  utils.py
detection/data/: README.md  arguments.py  const.py  data.py  dataset.py  datasets.py  factory.py  generate.py  generate_LM.py  generate_language_model.py  wrapper.py
detection/models/: README.md  const.py  detectors.py  language_model.py  translation.py  validate.py
detection/models/smr/: core.py
docs/: data.md  framework.md  models.md
resources/: data.dvc
resources/data/: tatoeba_sample.csv
scripts/: load_bert_score.py  load_bleurt.py  load_comet.py  load_xlm_large.py  run_proxy.sh
tests/: __init__.py  test_arguments.py  test_baseline.py  test_detectors.py  test_factory.py  test_functionality.py  test_language_model.py  test_pipeline.py  test_pipelines.py  test_proxy.py  test_translate.py
tests/data/: lenta_sample.csv
tests/unit/: test_baseline.py
